--- a/Lecture1/tryjs_lightbulb.html
+++ b/Lecture1/tryjs_lightbulb.html
@@ -3,7 +3,7 @@
   <body>
     <h2>What Can JavaScript Do?</h2>
 
-    <p>JavaScript can change HTML attribute values.</p>
+    <p>JavaScript can change HTML attribute values.wefewfwe</p>
 
     <p>
       In this case JavaScript changes the value of the src (source) attribute of
