--- a/Web prpgram/Me.HTML
+++ b/Web prpgram/Me.HTML
@@ -1,11 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="Author" content="ชื่อผู้พัฒนาเว็บ" />
+    <meta name="KeyWords" content="ข้อความ 1, ข้อความ 2 " />
     <title>History for me</title>
-</head>
-<body>
-    <h1>Hello World Kittisak</h1>
-</body>
+  </head>
+  <body>
+    <h1 align="center">Hello My name is Kittisak Suksamai</h1>
+    <hr />
+    <p>ผมจบ ปวช. ไฟฟ้ากำลัง งานอดิเรกเล่นเกม</p>
+    <p></p>
+    <p></p>
+
+    <hr />
+    <a href="https://twitter.com/">twitter</a>
+
+    <table border="1">
+      <tr>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td>สี</td>
+        <td></td>
+      </tr>
+      <tr>
+        <td>อาหารชอบ</td>
+        <td></td>
+      </tr>
+      <tr>
+        <td>อาหารไม่ชอบ</td>
+        <td></td>
+      </tr>
+    </table>
+  </body>
 </html>
