--- a/Web prpgram/Me.HTML
+++ b/Web prpgram/Me.HTML
@@ -6,33 +6,57 @@
     <meta name="KeyWords" content="ข้อความ 1, ข้อความ 2 " />
     <title>History for me</title>
   </head>
-  <body>
-    <h1 align="center">Hello My name is Kittisak Suksamai</h1>
+  <body bgcolor =#D3D3D3>
+    <h1 align = 'center'>Information</h1>
+    <img src="FF.jpg">
     <hr />
-    <p>ผมจบ ปวช. ไฟฟ้ากำลัง งานอดิเรกเล่นเกม</p>
-    <p></p>
-    <p></p>
+    <p align = 'center'>นายกิตติศักดิ์ สุขสมัย บ้านเกิดอยู่นครปฐม เกิดวันที่ 26 พฤษภาคม พ.ศ.2538</p>
+    <p align = 'center'>ID 6206021612024 IT 2RC</p>
+    <p align = 'center'></p>
 
     <hr />
-    <a href="https://twitter.com/">twitter</a>
-
-    <table border="1">
-      <tr>
-        <td></td>
-        <td></td>
-      </tr>
+    <p align = 'center'>ข้อมูลทั่วๆไป</p>
+    <table border="1" align = 'center'>
+     
       <tr>
         <td>สี</td>
-        <td></td>
+        <td>ฟ้า</td>
       </tr>
       <tr>
         <td>อาหารชอบ</td>
-        <td></td>
+        <td>หน่อไม้</td>
       </tr>
       <tr>
         <td>อาหารไม่ชอบ</td>
-        <td></td>
+        <td>ของหวานเกินเหตุ</td>
+      </tr>
+      <tr>
+        <td>Vtuber ที่ simp</td>
+        <td><a href="https://twitter.com/shirakamifubuki" target="_blank">Shirakami Fubuki</a></td>
       </tr>
     </table>
+    <hr />
+    <p align = 'center' >
+      Contact
+    </p>
+    <p align = 'center' >
+    <a href="https://www.facebook.com/Onew.susamai/" target="_blank">facebook</a>
+    <a href="https://twitter.com/OnewSuksamai" target="_blank">twitter</a>
+    </p>
+    <hr />
+    <ul>
+      <lh> Genshin ไอดีหลัก AR53</lh>
+      <li> Venti</li>
+      <li> Jean</li>
+      <li> Zhongli</li>
+      <li> Mona</li>
+    </ul>
+    <ul>
+      <lh> Genshin ไอดีรอง AR50</lh>
+      <li> Klee</li>
+      <li> Qiqi</li>
+      <li> Mona</li>
+      <li> Albedo</li>
+    </ul>
   </body>
 </html>
