--- a/Web prpgram/Me.HTML
+++ b/Web prpgram/Me.HTML
@@ -5,19 +5,31 @@
     <meta name="Author" content="ชื่อผู้พัฒนาเว็บ" />
     <meta name="KeyWords" content="ข้อความ 1, ข้อความ 2 " />
     <title>History for me</title>
+    <link rel="stylesheet" type="text/css" href="main.css" />
+    <style type="text/css">
+      body{
+        
+      }
+      h1{
+        color:rgb(0, 195, 255); 
+        font-family:Arial
+
+      }
+    </style>
   </head>
-  <body bgcolor =#D3D3D3>
-    <h1 align = 'center'>Information</h1>
-    <img src="FF.jpg">
+  <body>
+    <h1 align="center">Information</h1>
+    <p align="center"><img src="FF.jpg" width="200" /></p>
     <hr />
-    <p align = 'center'>นายกิตติศักดิ์ สุขสมัย บ้านเกิดอยู่นครปฐม เกิดวันที่ 26 พฤษภาคม พ.ศ.2538</p>
-    <p align = 'center'>ID 6206021612024 IT 2RC</p>
-    <p align = 'center'></p>
+    <p align="center">
+      นายกิตติศักดิ์ สุขสมัย บ้านเกิดอยู่นครปฐม เกิดวันที่ 26 พฤษภาคม พ.ศ.2538
+    </p>
+    <p align="center">ID 6206021612024 IT 2RC</p>
+    <p align="center"></p>
 
     <hr />
-    <p align = 'center'>ข้อมูลทั่วๆไป</p>
-    <table border="1" align = 'center'>
-     
+    <h1 align="center">ข้อมูลทั่วๆไป</h1>
+    <table border="1" align="center">
       <tr>
         <td>สี</td>
         <td>ฟ้า</td>
@@ -32,31 +44,27 @@
       </tr>
       <tr>
         <td>Vtuber ที่ simp</td>
-        <td><a href="https://twitter.com/shirakamifubuki" target="_blank">Shirakami Fubuki</a></td>
+        <td>
+          <a href="https://twitter.com/shirakamifubuki" target="_blank"
+            >Shirakami Fubuki</a
+          >
+        </td>
       </tr>
     </table>
     <hr />
-    <p align = 'center' >
-      Contact
-    </p>
-    <p align = 'center' >
-    <a href="https://www.facebook.com/Onew.susamai/" target="_blank">facebook</a>
-    <a href="https://twitter.com/OnewSuksamai" target="_blank">twitter</a>
+    <h1 align="center">Contact</h1>
+    <p align="center">
+      <a href="https://www.facebook.com/Onew.susamai/" target="_blank"
+        >facebook</a
+      >
+      <a href="https://twitter.com/OnewSuksamai" target="_blank">twitter</a>
     </p>
     <hr />
-    <ul>
-      <lh> Genshin ไอดีหลัก AR53</lh>
-      <li> Venti</li>
-      <li> Jean</li>
-      <li> Zhongli</li>
-      <li> Mona</li>
-    </ul>
-    <ul>
-      <lh> Genshin ไอดีรอง AR50</lh>
-      <li> Klee</li>
-      <li> Qiqi</li>
-      <li> Mona</li>
-      <li> Albedo</li>
-    </ul>
+    <table>
+      <tr>
+        <td><div>กล่องใส่ข้อความ1</div></td>
+        <td><div>กล่องใส่ข้อความ2</div></td>
+      </tr>
+    </table>
   </body>
 </html>
